# project

./: .deepsource.toml  .gitattributes  .gitignore  01-InputFiles.md  02-CommonOptions.md  Aggregates.c  Aggregates.h  Aggregates.md  AnalysisTools.c  AnalysisTools.h  Aux.c  Aux.h  CMakeLists.txt  CStructs.h  Config.c  Errors.c  Errors.h  General.c  General.h  Globals.c  Globals.h  InputFiles.md  Makefile  MathUtils.h  Options.c  Options.h  README.md  Read.c  Read.h  ReadWrite.c  ReadWrite.h  ReadWriteConfig.c  ReadWriteConfig.h  ReadWriteField.c  ReadWriteField.h  ReadWriteLdata.c  ReadWriteLdata.h  ReadWriteLtrj.c  ReadWriteLtrj.h  ReadWriteVtf.c  (+25 more)
Common/: 02-CommonUtilities.md  03-CommonUtilities.md  AggDensity.c  Aggregates-NotSameBeads.c  Aggregates.c  Aggregates.h  AngleMolecules.c  Average-old.c  Average.c  BondLength.c  Config.c  Config_from_xyz.c  DensityAggregates.c  DensityMolecules.c  DihedralMolecules.c  DistrAgg.c  GyrationAggregates.c  GyrationMolecules.c  JoinAggregates.c  JoinRuns.c  Makefile  MolDensity.c  PairCorrel.c  PairCorrelPerAgg.c  PotentialAggregates.c  RgAgg.c  SelectedVcf.c  TransformVsf.c  TransformVsf.h  test.c  traject-v2_6.f90  traject.f90
Examples/AddToSystem/: FIELD-1  FIELD-2  FIELD-3  in.vcf  in.vsf  info.txt  script.sh
Examples/AngleMolecules/: README.txt  angles.gnuplot  angles.tex  angles.txt  angles_extra.gnuplot  angles_extra.txt  traj.data  traj.nfo  traj.vcf
Examples/BondLength/: A2B2.gnuplot  A3BA2.gnuplot  README.txt  bonds.txt  end_to_end.gnuplot  end_to_end.txt
Examples/GenLayers/: FIELD  info.txt  out.vcf  out.vsf
Examples/Info/: FIELD.nfo  README.txt  in.FIELD  in.vtf  opt_i.nfo  vtf.nfo  vtf_coor.nfo  vtf_detailed.nfo
Examples/JoinSystems/: NewSystem_b.lammpstrj  NewSystem_c.lammpstrj  NewSystem_d.lammpstrj  NewSystem_e.lammpstrj  README.txt  System2.lammpstrj
Examples/Surface/: SurfBeads.vtf  info.txt  surf.txt  thickness.sh  thickness.txt  vmd.tcl
Examples/lmp_vtf/: info.txt  lmp.data  out.vcf  out.vsf
Extra/: CMakeLists.txt  GalContacts.c  GenGal.c  Selected-from_wall.c  Template.c
Linear/: 04-Linear.md  EndToEnd.c  Makefile  PersistenceLength.c
Nanoparticles/: 03-Nanoparticles.md  05-Nanoparticles.md  C60.c  Makefile
OneTime/: Adsorbed.c  AggDensity-CICheck.c  ChargeRatio.c  DensityAggregates-NotHomop.c  DensityBox_mod.c  DensityMolecules-NearNanoSurf.c  DistrAgg-NoNanoAggs.c  DistrAgg-NotHomopol-NumberOfAbsorbedHomopolymerChains.c  DistrAgg-NumberOfAbsorbedHomopolymerChains.c  DistrAgg-OnlyPols.c  DistrAgg2D.c  GyrationAggregates-NotBBlock.c  GyrationAggregates-NotHomopol.c  GyrationAggregates-NotHomopolNotB.c  Makefile  NanoparticleDistances.c  PairCorrel-Fluor.c  PlaceSquares.c
Testing/: Coordinates.c  coor.vcf  coor.vtf  out.vcf
Testing/Coordinates/: ABCD.vcf  ABCD.vtf  ABDE.vcf  ABDE.vtf  ACD.vcf  ACD.vtf  BCD.vcf  BCD.vtf  BD.vcf  BD.vtf  CONTROL  FIELD  coor-err1.vcf  coor-err1.vsf  coor-err2.vcf  coor-err2.vsf  coor-err3.vcf  coor-err3.vsf  coor-err4.vcf  coor-err4.vsf  coor-err_vsf.vtf  coor.vcf  coor.vsf  coor.vtf  err1-BCD.vcf  err1-BCD.vtf  err1-join.vcf  err1-join.vtf  err2-BCD.vcf  err2-BCD.vtf  err3-BCD.vcf  err3-BCD.vtf  err4-BCD.vcf  err4-BCD.vtf  err5-BCD.vtf  err6-BCD.vtf  err7-BCD.vtf  join.vcf  join.vtf  out.vcf  (+2 more)
Utility/: AddToSystem.c  Aggregates-NotSameBeads.c  Aggregates-wall.c  Aggregates.c  Aggregates.h  AngleMolecules.c  Average.c  BondLength.c  Config.c  Config_from_xyz.c  Density2D.c  DensityAggregates.c  DensityBox.c  DensityMolecules.c  DihedralMolecules.c  DistrAgg.c  GenAnglesDihedrals.c  GenBrush.c  GenFIELD.c  GenLayers.c  GenSystem.c  GyrationAggregates.c  GyrationMolecules.c  Info.c  JoinAggregates.c  JoinRuns.c  JoinSystems.c  Makefile  NumDeriv.c  OrientOrder.c  Orientation-2.c  Orientation.c  OrientationAggregates.c  OrientationMolecules.c  PairCorrel.c  PersistenceLength.c  PotentialAggregates.c  Selected.c  SelectedVcf-2.c  SelectedVcf.c  (+9 more)
doc/: DoxyErrors.txt
doc-latex/: AddToSystem.tex  Aggregates.fdb_latexmk  Aggregates.fls  Aggregates.tex  AngleMolecules.tex  Average.tex  Averages.tex  BondLength.fdb_latexmk  BondLength.fls  BondLength.tex  Config.tex  DensityAggregates.tex  DensityBox.tex  DensityMolecules.tex  DihedralMolecules.tex  DistrAgg.tex  EndToEnd.tex  GenLayers.tex  GenSystem.tex  GyrationAggregates.tex  GyrationMolecules.tex  Info.tex  InputFile.aux  InputFiles.aux  InputFiles.tex  Installatio.aux  Installation.aux  Installation.tex  Introduction.aux  Introduction.tex  Itroduction.aux  JoinAggregates.tex  JoinRuns.tex  JoinSystems-tikz-a.tex  JoinSystems-tikz-b.tex  JoinSystems-tikz-c.tex  JoinSystems-tikz.tex  JoinSystems.tex  Local.tex  Orientation.tex  (+36 more)
doc/html/: Aggregates_8h_source.html  AnalysisTools_8h.html  AnalysisTools_8h.js  AnalysisTools_8h_source.html  Common.html  CommonOptions.html  InputFiles.html  LinearChains.html  Options_8h.html  Options_8h.js  Options_8h_source.html  Structs_8h.html  Structs_8h.js  Structs_8h_source.html  TransformVsf_8h_source.html  annotated.html  annotated_dup.js  classes.html  dir_1fbf9ced6d9e3b535cf2e9cca6bfbe46.html  dir_387d5f8ef33e9b65030a487e6f1b21f6.html  dir_4ab6b4cc6a7edbff49100e9123df213f.html  dir_4ab6b4cc6a7edbff49100e9123df213f.js  dir_4e3bb72857dd757f979c417a47adff09.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_5d11872df699de9c5375ea845dbb8182.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_7e58824643254c5d4e30975c6bc0b042.html  doxygen.css  files.html  files.js  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  index.html  navtree.css  navtreedata.js  navtreeindex0.js  (+18 more)
doc/latex/: AnalysisTools_8h.tex  Common.tex  CommonOptions.tex  InputFiles.tex  LinearChains.tex  Options_8h.tex  Structs_8h.tex  annotated.tex  dir_1fbf9ced6d9e3b535cf2e9cca6bfbe46.tex  dir_387d5f8ef33e9b65030a487e6f1b21f6.tex  dir_4ab6b4cc6a7edbff49100e9123df213f.tex  dir_4e3bb72857dd757f979c417a47adff09.tex  dir_4fef79e7177ba769987a8da36c892c5f.tex  files.tex  (+17 more)
docs/: Doxyfile  InputFiles.rst  Install.rst  conf.py  index.rst  index.rst.bak
(+106 files in other folders)
